--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 		<p>Wow</p>
 
 		<button>Click me!</button>
-
+		<ul>
+			<li>hi</li>
+			<li>adi</li>
+			<li>love</li>
+		</ul>
 		<div>Oh oh</div>
 
 		<script src="./script.js"></script>
