--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p>Wow</p>
 
 		<button>Click me!</button>
-
+		<button>new one</button>
 		<div>Oh oh</div>
 
 		<script src="./script.js"></script>
